objects/Retry_Setting__mdt.object
<CustomObject>
    <description>Manages how many retries, the delay between tries and the timeout on retry attempts allowed for a specific process</description>
    <label>Retry Setting</label>
    <pluralLabel>Retry Settings</pluralLabel>
    <fields>
        <fullName>Max_Tries__c</fullName>
        <label>Max Tries</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Timeout_In_Seconds__c</fullName>
        <label>Timeout In Seconds</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_Between_Tries_In_Seconds__c</fullName>
        <label>Time Between Tries In Seconds</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>